fix: demo load viz not showing on Chrome

--- a/demo/index.css
+++ b/demo/index.css
@@ -15,6 +15,7 @@ body {
 		"reactor-container control-box sensors-box" minmax(200px, 25%)
 		"log-box wviewer wviewer" 1fr / 370px 1fr 1fr;
 	background: #f3f3f3;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 body > div {
@@ -60,6 +61,8 @@ body > div {
 	--shake-y: -0px;
 	animation: shake .04s linear alternate infinite;
 	margin: auto;
+	width: 100%;
+	height: 100%;
 }
 
 @keyframes spin {
